# RodowodyAPP

./: .gitignore  CHANGELOG.md  EBPB_bison_report.xlsx  ODDANIE_MS_TEAMS.md  PRZEWODNIK_EGZAMINACYJNY.html  PRZEWODNIK_EGZAMINACYJNY.md  README.md  app.py  bison_pedigree.py  metrics_definition.md  plotting.py  requirements.txt  run_streamlit.py  run_tk.py
zubry_pedigree_app/: .gitignore  EBPB_bison_report.xlsx  README.md  __init__.py  metrics_definition.md  pyproject.toml  requirements.txt  run_app.py  run_cli.py  run_streamlit.py  run_tk.py  run_web.py
zubry_pedigree_app/.mpl_cache/: fontlist-v390.json
zubry_pedigree_app/.streamlit/: config.toml
zubry_pedigree_app/app/: EBPB_merged_database.xlsx  __init__.py  cli.py  config.py  main.py  runtime_path.py
zubry_pedigree_app/app/analytics/: __init__.py  breeding_pairs.py  inbreeding_wright.py  kinship_decomposition.py  line_membership.py  mean_kinship.py  population_dashboard.py  population_genetics.py  population_gi.py
zubry_pedigree_app/app/data/: __init__.py  auto_fix.py  dataset_loader.py  ebpb_formats.py  manual_edit.py  validator.py
zubry_pedigree_app/app/huba/: __init__.py  archive.py  config_io.py  context.py  engine.py  layout.py  models.py  rules.py  (+2 more)
zubry_pedigree_app/config/: gui.json  huba_project.example.json  project_batch_example.json
zubry_pedigree_app/data/: EBPB_register.xlsx
zubry_pedigree_app/tests/: __init__.py  test_dataset_loader.py  test_descendant_pedigree.py  test_huba_integrity.py  test_kinship_decomposition.py  test_kinship_phi.py  test_mean_kinship.py  test_pipeline_core.py
(+63 files in other folders)
