[project]
name = "zubry-pedigree-app"
version = "1.1.0"
description = "HUBA-WPB Cleaner — walidacja i czyszczenie baz rodowodowych żubrów (Streamlit)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
